stuck on async issue / promises

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,9 +19,19 @@ body {
   margin: 2rem;
 }
 
-
 a, a li, a:hover {
   text-decoration: none;
+}
+
+h1 {
+  margin-top: 0.5em;
+}
+
+.flex-div {
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  /* flex-direction:  */
 }
 
 .signup-form {
@@ -273,6 +283,11 @@ a, a li, a:hover {
 
 .dash-btn:hover {
   cursor: pointer;
+}
+
+.checkout-btn {
+  font-size:1.1em;
+  padding: 0.6em 1.2em;
 }
 
 /*FIXME: make this more finessed*/
